syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.ban7.cours.poc.grpc.payment";
option java_outer_classname = "PaymentProto";

package payment;

// Service de paiement
service PaymentService {
  // Traite un paiement
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);

  // Vérifie le statut d'un paiement
  rpc CheckPaymentStatus(PaymentStatusRequest) returns (PaymentStatusResponse);
}

// Requête de paiement
message PaymentRequest {
  string cart_id = 1;
  double amount = 2;
  string currency = 3;
  PaymentMethod payment_method = 4;
  CustomerInfo customer = 5;
}

// Informations client
message CustomerInfo {
  string customer_id = 1;
  string email = 2;
  string name = 3;
}

// Méthode de paiement
enum PaymentMethod {
  CREDIT_CARD = 0;
  DEBIT_CARD = 1;
  PAYPAL = 2;
  BANK_TRANSFER = 3;
}

// Réponse de paiement
message PaymentResponse {
  bool success = 1;
  string transaction_id = 2;
  PaymentStatus status = 3;
  string message = 4;
  int64 timestamp = 5;
}

// Statut du paiement
enum PaymentStatus {
  PENDING = 0;
  APPROVED = 1;
  DECLINED = 2;
  ERROR = 3;
}

// Requête de vérification de statut
message PaymentStatusRequest {
  string transaction_id = 1;
}

// Réponse de vérification de statut
message PaymentStatusResponse {
  string transaction_id = 1;
  PaymentStatus status = 2;
  double amount = 3;
  string message = 4;
}